<resources>
    <string name="generic_name">Name</string>
    <string name="generic_select_the_position">Select the position</string>
    <string name="generic_config">Config</string>
    <string name="generic_counters">Counters</string>
    <string name="generic_modify">Modify</string>
    <string name="item_event_desc_enabled_children">Enabled</string>
    <string name="item_event_desc_disabled_children">Disabled</string>
    <string name="item_event_ignore_toggle">Ignore</string>
    <string name="item_image_condition_desc_threshold">%1$d%%</string>
    <string name="item_image_condition_desc_complete_threshold">Difference: %1$d%%</string>
    <string name="item_image_condition_visible">Visible</string>
    <string name="item_image_condition_not_visible">Not visible</string>
    <string name="item_counter_reached_title">On counter reached</string>
    <string name="item_counter_reached_desc">Verify the value of a counter modified by an Action</string>
    <string name="item_counter_reached_details">%1$s %2$s %3$s</string>
    <string name="item_timer_reached_title">On timer reached</string>
    <string name="item_timer_reached_desc">Fulfilled after a defined time from this trigger activation</string>
    <string name="item_timer_reached_details">%1$s after event is enabled</string>
    <string name="item_broadcast_received_title">On Broadcast received</string>
    <string name="item_broadcast_received_desc">Fulfilled when a Broadcast is received</string>
    <string name="item_broadcast_received_details">%1$s received</string>
    <string name="item_copy_title">Copy</string>
    <string name="item_copy_desc">Copy an existing Action from any Scenarios</string>
    <string name="item_click_title">Click</string>
    <string name="item_click_desc">Click somewhere on the screen</string>
    <string name="item_click_details_on_condition">During %1$s on %2$s</string>
    <string name="item_click_details_at_position">During %1$s</string>
    <string name="input_field_label_click_wait_after">Wait after click (ms)</string>
    <string name="item_swipe_title">Swipe</string>
    <string name="item_swipe_desc">Swipe from a position on the screen to another</string>
    <string name="item_swipe_details">During %1$s</string>
    <string name="item_precision_gesture_title">Precision gesture</string>
    <string name="item_precision_gesture_desc">Record and replay a raw touch gesture with Shizuku</string>
    <string name="item_precision_gesture_details">%1$d events during %2$s</string>
    <string name="dialog_title_precision_gesture">Precision gesture</string>
    <string name="button_precision_gesture_record">Record</string>
    <string name="button_precision_gesture_play">Play</string>
    <string name="button_precision_gesture_clear">Clear</string>
    <string name="button_precision_gesture_save">Save</string>
    <string name="button_precision_gesture_delete">Delete</string>
    <string name="status_precision_gesture_empty">No gesture recorded</string>
    <string name="status_precision_gesture_recording">Touch the target screen to record. Recording stops automatically.</string>
    <string name="status_precision_gesture_ready">%1$d events recorded during %2$s</string>
    <string name="status_precision_gesture_playing">Playing precision gesture</string>
    <string name="status_precision_gesture_played">Precision gesture played</string>
    <string name="item_pause_title">Wait</string>
    <string name="item_pause_desc">Pause the detection execution</string>
    <string name="item_pause_details">During %1$s</string>
    <string name="item_change_counter_title">Change counter</string>
    <string name="item_change_counter_desc">Change a value to verify it later</string>
    <string name="item_change_counter_details">%1$s %2$s %3$s</string>
    <string name="item_change_counter_details_error">Counter is invalid</string>
    <string name="item_toggle_event_title">Change event state</string>
    <string name="item_toggle_event_desc">Change the enabled state of an event</string>
    <string name="item_toggle_event_details_enable_all">Enable all</string>
    <string name="item_toggle_event_details_disable_all">Disable all</string>
    <string name="item_toggle_event_details_invert_all">Invert all</string>
    <string name="item_toggle_event_details_manual">Change %1$d events</string>
    <string name="item_toggle_event_details_error">Target event not found</string>
    <string name="item_intent_title">Intent</string>
    <string name="item_intent_desc">Interact with another application</string>
    <string name="item_intent_details">Send %1$s</string>
    <string name="item_intent_details_component_name">Send %1$s to %2$s</string>
    <string name="item_intent_details_start_activity">Start %1$s</string>
    <string name="item_notification_title">Notification</string>
    <string name="item_notification_desc">Send a notification to your device</string>
    <string name="item_notification_details_text">Send \"%1$s\"</string>
    <string name="item_notification_details_counter">Send %1$s value</string>
    <string name="item_system_action_title">System action</string>
    <string name="item_system_action_desc">Use an Android system action (back, home or recent apps)</string>
    <string name="item_system_action_details_text">%1$s</string>
    <string name="item_set_text_title">Write text</string>
    <string name="item_set_text_desc">Write a text in the currently focused view</string>
    <string name="item_precision_text_title">Precision text</string>
    <string name="item_precision_text_desc">Send text with Shizuku key events, shell input, or clipboard paste</string>
    <string name="item_set_text_details_text">%1$s</string>
    <string name="item_set_text_details_text_empty">Clear text</string>
    <string name="item_precision_text_details_text">%1$d chars, %2$s</string>
    <string name="dialog_title_precision_text">Precision text</string>
    <string name="input_field_label_precision_text">Text</string>
    <string name="button_precision_text_mode_keys">Key events</string>
    <string name="button_precision_text_mode_shell">Shell input</string>
    <string name="button_precision_text_mode_paste">Paste</string>
    <string name="field_precision_text_replace_existing_title">Replace existing text</string>
    <string name="field_precision_text_replace_existing_disabled">Paste at the current cursor position.</string>
    <string name="field_precision_text_replace_existing_enabled">Select all text before pasting.</string>
    <string name="button_precision_text_try">Try</string>
    <string name="status_precision_text_ready">%1$d chars, %2$s</string>
    <string name="status_precision_text_typing">Sending precision text</string>
    <string name="status_precision_text_typed">Precision text sent</string>
    <string name="item_stop_scenario_title">Stop scenario</string>
    <string name="item_stop_scenario_desc">Stop the current scenario</string>
    <string name="item_stop_scenario_details">Stop the scenario</string>
    <string name="search_view_hint_event_copy">Search by event name</string>
    <string name="search_view_hint_action_copy">Search by action name</string>
    <string name="search_view_hint_condition_copy">Search by condition name</string>
    <string name="list_header_copy_conditions_this">Conditions from this event</string>
    <string name="list_header_copy_conditions_all">Conditions from all events</string>
    <string name="list_header_copy_action_this">Actions from this event</string>
    <string name="list_header_copy_action_all">Actions from other events</string>
    <string name="list_header_copy_event_this">Events from this scenario</string>
    <string name="list_header_copy_event_all">Events from all scenarios</string>
    <string name="dialog_title_scenario_config">Scenario</string>
    <string name="message_empty_screen_event_title">No screen events !</string>
    <string name="message_empty_screen_event_desc">A screen event contains a set of actions executed when a specific condition is detected on the screen.\nYou need at least one screen or trigger event in your scenario to execute it.</string>
    <string name="button_add_event_group">Add event group</string>
    <string name="label_event_group_gate">Group gate condition</string>
    <string name="content_desc_expand_group">Expand or collapse group</string>
    <string name="dialog_title_event_group">Event group</string>
    <string name="dropdown_event_group_label">Event group</string>
    <string name="dropdown_event_group_none">None</string>
    <string name="dropdown_parent_group_label">Parent group</string>
    <string name="dropdown_parent_group_none">None (top level)</string>
    <string name="warning_dialog_message_event_group_delete">Deleting this group will unassign its events. Are you sure?</string>
    <string name="message_empty_trigger_event_list_title">No trigger events !</string>
    <string name="message_empty_trigger_event_list_desc">A trigger event contains a set of actions executed when a set of custom conditions are met.\nYou need at least one screen or trigger event in your scenario to execute it.</string>
    <string name="menu_item_title_image_events">Screen</string>
    <string name="menu_item_title_trigger_events">Triggers</string>
    <string name="menu_item_title_more">More</string>
    <string name="field_scenario_keep_screen_on_title">Keep screen on</string>
    <string name="field_scenario_keep_screen_on_enabled">Keep the device screen on while detecting.</string>
    <string name="field_scenario_keep_screen_on_disabled">Use the normal device screen behaviour.</string>
    <string name="field_scenario_accessibility_screenshot_title">Accessibility screenshots</string>
    <string name="field_scenario_accessibility_screenshot_enabled">Capture with accessibility screenshots. This avoids screen sharing but may be slower.</string>
    <string name="field_scenario_accessibility_screenshot_disabled">Capture with Android screen sharing.</string>
    <string name="field_scenario_auto_start_title">Auto start</string>
    <string name="field_scenario_auto_start_enabled">Start this scenario automatically.</string>
    <string name="field_scenario_auto_start_disabled">Wait for the play button before starting.</string>
    <string name="input_field_label_auto_start_delay">Auto start delay (ms)</string>
    <string name="field_scenario_quality_title">Detection resolution</string>
    <string name="field_scenario_quality_description">To achieve faster detection, Klick\'r is downscaling the images before detecting.\n\nIf you increase the resolution, the detection will be slower, but more accurate. If you decrease the resolution, the detection will be faster, but less accurate. Find the good ratio between the detection resolution and the conditions thresholds to get the best of your scenarios!</string>
    <string name="field_scenario_quality_resolution" translatable="false">%1$d%%</string>
    <string name="field_show_debug_view_title">Show debug view</string>
    <string name="field_show_debug_view_desc">Display the events triggered while detecting, and enable the touch probe on the control menu.</string>
    <string name="item_title_debug_generate_report">Generate a report</string>
    <string name="item_desc_debug_generate_report">Capture your scenario behaviour while detecting to create a report.</string>
    <string name="field_show_debug_report_title">Show report</string>
    <string name="field_show_debug_report_desc_available">Debug report is available</string>
    <string name="field_detection_area_coord_left">Left</string>
    <string name="field_detection_area_coord_top">Top</string>
    <string name="field_detection_area_coord_right">Right</string>
    <string name="field_detection_area_coord_bottom">Bottom</string>
    <string name="content_desc_conditions_count">The number of conditions in this event</string>
</resources>