<?xml version="1.0" encoding="utf-8"?>
<!--
* Copyright (C) 2024 Kevin Buzeau
*
* This program is free software: you can redistribute it and/or modify
* it under the terms of the GNU General Public License as published by
* the Free Software Foundation, either version 3 of the License, or
* (at your option) any later version.
*
* This program is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/margin_horizontal_default"
    android:paddingTop="@dimen/margin_vertical_large"
    android:paddingBottom="@dimen/margin_vertical_extra_large">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <include layout="@layout/include_field_text_input"
            android:id="@+id/field_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/margin_horizontal_mini"
            android:hint="@string/field_detection_area_coord_left"/>

        <include layout="@layout/include_field_text_input"
            android:id="@+id/field_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_horizontal_mini"
            android:hint="@string/field_detection_area_coord_top"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical_small"
        android:orientation="horizontal">

        <include layout="@layout/include_field_text_input"
            android:id="@+id/field_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/margin_horizontal_mini"
            android:hint="@string/field_detection_area_coord_right"/>

        <include layout="@layout/include_field_text_input"
            android:id="@+id/field_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_horizontal_mini"
            android:hint="@string/field_detection_area_coord_bottom"/>

    </LinearLayout>

</LinearLayout>
