<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_item_event_group"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_height_big"
    android:background="?attr/colorSurfaceVariant">

    <ImageButton
        android:id="@+id/btn_expand"
        android:layout_width="@dimen/image_button_size"
        android:layout_height="@dimen/image_button_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="center"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_chevron_down"
        android:contentDescription="@string/content_desc_expand_group"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal_default"
        app:layout_constraintStart_toEndOf="@id/btn_expand"
        app:layout_constraintEnd_toStartOf="@id/layout_conditions"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_gate_label"
        app:layout_constraintVertical_chainStyle="packed"
        android:textSize="@dimen/text_size_list_item_text_big"
        android:textStyle="bold"
        android:singleLine="true"
        tools:text="Split screen"/>

    <TextView
        android:id="@+id/text_gate_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_event_group_gate"
        app:layout_constraintStart_toStartOf="@id/text_name"
        app:layout_constraintEnd_toEndOf="@id/text_name"
        app:layout_constraintTop_toBottomOf="@id/text_name"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:id="@+id/layout_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="@dimen/margin_horizontal_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_condition"
            android:contentDescription="@string/content_desc_conditions_count"/>

        <TextView
            android:id="@+id/text_conditions_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            tools:text="1"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
